z-index bug

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -54,4 +54,7 @@ body{
   right: 0;
   left: 0;
   bottom: 0;
+  height: 60px;
+  overflow: hidden;
+  z-index: 2333;
 }
